--- a/submit.qmd
+++ b/submit.qmd
@@ -9,6 +9,8 @@ format:
 ## Read the data
 
 ```{r}
+library(R.utils)
+
 if (!file.exists("met_all.gz"))
   download.file(
     url = "https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz",
